manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-app-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: sock.ideategudy.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80

  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #       - www.ideategudy.com
  #     secretName: example-tls
